--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
+    "react-collapsible-content": "^1.0.0",
+    "react-dom": "^17.0.2",
+    "react-jss": "^10.9.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
+    "simple-flexbox": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
